--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jest-styled-components": "^6.3.3",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-rnd": "^10.1.1",
     "react-scripts": "3.2.0",
     "storybook": "^5.1.11",
     "storybook-addon-jsx": "^7.1.6",
