--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint \"./**/*.{js,ts,tsx}\" --fix",
-    "create:component": "create-component-app --template netsites",
+    "create:component": "create-component-app --template component",
     "storybook": "start-storybook -s ./"
   },
   "husky": {
