--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@types/react-dom": "16.9.1",
     "@types/storybook-addon-jsx": "^5.4.3",
     "@types/styled-components": "^4.1.19",
+    "@typescript-eslint/eslint-plugin": "^2.3.2",
     "create-component-app": "^1.7.0",
     "jest-styled-components": "^6.3.3",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-rnd": "^10.1.1",
     "react-scripts": "3.2.0",
     "storybook": "^5.1.11",
     "storybook-addon-jsx": "^7.1.6",
@@ -68,6 +68,7 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.15.1",
     "eslint-plugin-react-hooks": "^2.1.2",
+    "eslint-plugin-testing-library": "^1.0.0",
     "husky": ">=1",
     "lint-staged": ">=8",
     "pretty-quick": "^1.11.1",
