--- a/package.json
+++ b/package.json
@@ -3,22 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@loadable/component": "^5.10.3",
     "@storybook/addon-backgrounds": "^5.2.1",
     "@storybook/addon-knobs": "^5.2.1",
     "@storybook/react": "^5.2.1",
     "@testing-library/react": "^9.3.0",
     "@types/jest": "24.0.18",
+    "@types/loadable__component": "^5.10.0",
     "@types/node": "12.7.11",
     "@types/react": "16.9.5",
     "@types/react-dom": "16.9.1",
+    "@types/react-router-dom": "^5.1.0",
     "@types/storybook-addon-jsx": "^5.4.3",
     "@types/styled-components": "^4.1.19",
     "@typescript-eslint/eslint-plugin": "^2.3.2",
     "create-component-app": "^1.7.0",
     "jest-styled-components": "^6.3.3",
+    "p-min-delay": "^3.1.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-spring": "^8.0.27",
     "storybook": "^5.1.11",
     "storybook-addon-jsx": "^7.1.6",
     "styled-components": "^4.4.0",
@@ -56,6 +62,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@types/storybook__react": "^4.0.2",
     "@typescript-eslint/parser": "^2.3.2",
     "babel-loader": "^8.0.6",
