--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
-      "pre-push": "yarn test"
+      "pre-push": "CI=true yarn test"
     }
   },
   "eslintConfig": {
