--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@typescript-eslint/eslint-plugin": "^2.3.2",
     "create-component-app": "^1.7.0",
     "jest-styled-components": "^6.3.3",
+    "moment": "^2.24.0",
     "p-min-delay": "^3.1.0",
+    "polished": "^3.4.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router": "^5.1.2",
@@ -29,6 +31,7 @@
     "storybook": "^5.1.11",
     "storybook-addon-jsx": "^7.1.6",
     "styled-components": "^4.4.0",
+    "styled-normalize": "^8.0.6",
     "typescript": "3.6.3"
   },
   "scripts": {
@@ -38,6 +41,7 @@
     "eject": "react-scripts eject",
     "lint": "eslint \"./**/*.{js,ts,tsx}\" --fix",
     "create:component": "create-component-app --template component",
+    "create:containerComponent": "create-component-app --template containerComponent",
     "storybook": "start-storybook -s ./"
   },
   "husky": {
