Add api and utils paths

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -5,6 +5,8 @@
       "components/*": ["components/*"],
       "hooks/*": ["hooks/*"],
       "data/*": ["data/*"],
+      "api/*": ["api/*"],
+      "utils/*": ["utils/*"],
       "testing/*": ["../testing/*"]
     }
   }
