--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-spring": "^8.0.27",
+    "react-use": "^12.7.2",
     "storybook": "^5.1.11",
     "storybook-addon-jsx": "^7.1.6",
     "styled-components": "^4.4.0",
