--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "p-min-delay": "^3.1.0",
     "polished": "^3.4.1",
     "react": "^16.10.2",
+    "react-cookie": "^4.0.1",
     "react-dom": "^16.10.2",
+    "react-focus-lock": "^2.2.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
