--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/styled-components": "^4.1.19",
     "@typescript-eslint/eslint-plugin": "^2.3.2",
     "create-component-app": "^1.7.0",
+    "jest-date-mock": "^1.0.7",
     "jest-styled-components": "^6.3.3",
     "moment": "^2.24.0",
     "p-min-delay": "^3.1.0",
