--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jest-date-mock": "^1.0.7",
     "jest-styled-components": "^6.3.3",
     "moment": "^2.24.0",
+    "normalize.css": "^8.0.1",
     "p-min-delay": "^3.1.0",
     "polished": "^3.4.1",
     "react": "^16.10.2",
