--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-social-icons": "^4.1.0",
     "react-spring": "^8.0.27",
     "react-use": "^12.7.2",
     "storybook": "^5.1.11",
