--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-cookie": "^4.0.1",
     "react-dom": "^16.10.2",
     "react-focus-lock": "^2.2.1",
+    "react-ga": "^2.7.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
