--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "12.7.11",
     "@types/react": "16.9.5",
     "@types/react-dom": "16.9.1",
+    "@types/react-helmet": "^5.0.14",
     "@types/react-router-dom": "^5.1.0",
     "@types/storybook-addon-jsx": "^5.4.3",
     "@types/styled-components": "^4.1.19",
@@ -30,6 +31,7 @@
     "react-dom": "^16.10.2",
     "react-focus-lock": "^2.2.1",
     "react-ga": "^2.7.0",
+    "react-helmet": "^5.2.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
